package Comprehensive0;

/**
 * @Author: sun
 * @Date: 2021/4/29 10:04
 * @title: Adapter
 * @Description:
 * @version: 1.0
 */
public class Adapter {
    public void trans(){
        System.out.println("api数据转化");
    }

}
