package Comprehensive0;

/**
 * @Author: sun
 * @Date: 2021/4/29 10:08
 * @title: ExecelApi
 * @Description:
 * @version: 1.0
 */
public class ExecelApi {

    public void getData(){
        System.out.println("通过Api调用数据");
    }
}
