package Comprehensive0;

/**
 * @Author: sun
 * @Date: 2021/4/29 09:17
 * @title: dataGet
 * @Description: 数据获取方式接口，桥接模式中的接口
 * @version: 1.0
 */
public interface dataGet {
    public void setGetDataWay(dataShow name);
    public void datashow(String name);

}
