package Comprehensive0;

/**
 * @Author: sun
 * @Date: 2021/4/29 09:21
 * @title: dataShow
 * @Description:
 * @version: 1.0
 */
public abstract class dataShow {
    dataGet dataGet;

    public void setDataGet(Comprehensive0.dataGet dataGet) {
        this.dataGet = dataGet;
    }

    public abstract void dataShow(String s);

}
