package Comprehensive0;

/**
 * @Author: sun
 * @Date: 2021/4/29 09:23
 * @title: dataShow1
 * @Description:
 * @version: 1.0
 */
public class dataShow1 extends dataShow{

    @Override
    public void dataShow(String s) {
        System.out.println("文件显示方式1："+s);

    }
}
