package Comprehensive0;

/**
 * @Author: sun
 * @Date: 2021/4/29 09:29
 * @title: dataShow2
 * @Description:
 * @version: 1.0
 */
public class dataShow2 extends dataShow{

    @Override
    public void dataShow(String s) {
        System.out.println("文件显示方式2："+s);
    }
}
